css/style.css
/* ... */
@keyframes full-rotation {
  0% {
    -webkit-transform: rotate(0deg);
    transform: rotate(0deg);
  }
  100% {
    -webkit-transform: rotate(360deg);
    transform: rotate(360deg);
  }
}

/* Task View -------------------------------- */

/* Animated background text when background-clip: text supported, blue text otherwise. */
.task-description {
  font-family: var(--hand-font);
  color: var(--col-good-blue-100);
  background: -o-linear-gradient(transparent, transparent);
  -webkit-background-clip: text;
  background-size: 200%;
  /*will-change: background-position-x, background-position-y, filter;*/
  /*animation: moveBackground 35.5s infinite linear, glow 2s infinite linear;*/
  font-size: 1.2rem;
}

#task-view {
  margin-top: 2rem !important;
}

#task-view .task-description {
  max-width: 85%;
}

#task-name {
  position: fixed;
  top: 1rem;
  left: 50%;
  min-width: fit-content;
  transform: translateX(-50%);
}

@-webkit-keyframes moveBackground {
  0% {
    background-position-x: 0;
    background-position-y: 0;
  }
  100% {
    background-position-x: 900px;
    background-position-y: 900px;
  }
}

@keyframes moveBackground {
  0% {
    background-position-x: 0;
    background-position-y: 0;
  }
  100% {
    background-position-x: 900px;
    background-position-y: 900px;
  }
}

.task-description {
  padding: 1rem;
}

.task-notification {
  position: fixed;
  left: 50%;
  top: 50%;
  -webkit-transform: translate(-50%, -50%);
  -ms-transform: translate(-50%, -50%);
  transform: translate(-50%, -50%);
  z-index: 999;
  padding: 1rem 1.5rem 1rem 1rem;
  font-size: 2rem;
  border-radius: 1rem;
  -webkit-transition: opacity 0.5s;
  -o-transition: opacity 0.5s;
  transition: opacity 0.5s;
}

.task-notification * {
  margin: 0;
}

.hint-text {
  color: var(--col-good-blue-100);
}

.hint-book-menu {
  background-color: transparent;
  border-style: none;
  color: white;
  animation: jump 2s;
  -webkit-animation: jump 2s;
}

#task-hint-notification .close-button{
  border: none;
  color: white;
  background:none;
}

@keyframes wiggle {
	5%,
	50% {
    -webkit-transform: scale(1);
		transform: scale(1);
	}
	10% {
    -webkit-transform: scale(0.9);
		transform: scale(0.9);
	}
	15% {
    -webkit-transform: scale(1.15);
		transform: scale(1.15);
	}
	20% {
    -webkit-transform: scale(1.15) rotate(-5deg);
		transform: scale(1.15) rotate(-5deg);
	}
	25% {
    -webkit-transform: scale(1.15) rotate(5deg);
		transform: scale(1.15) rotate(5deg);
	}
	30% {
    -webkit-transform: scale(1.15) rotate(-3deg);
		transform: scale(1.15) rotate(-3deg);
	}
	35% {
    -webkit-transform: scale(1.15) rotate(2deg);
		transform: scale(1.15) rotate(2deg);
	}
	40% {
    -webkit-transform: scale(1.15) rotate(0);
		transform: scale(1.15) rotate(0);
	}
}

@-webkit-keyframes  wiggle {
	5%,
	50% {
    -webkit-transform: scale(1);
		transform: scale(1);
	}
	10% {
    -webkit-transform: scale(0.9);
		transform: scale(0.9);
	}
	15% {
    -webkit-transform: scale(1.15);
		transform: scale(1.15);
	}
	20% {
    -webkit-transform: scale(1.15) rotate(-5deg);
		transform: scale(1.15) rotate(-5deg);
	}
	25% {
    -webkit-transform: scale(1.15) rotate(5deg);
		transform: scale(1.15) rotate(5deg);
	}
	30% {
    -webkit-transform: scale(1.15) rotate(-3deg);
		transform: scale(1.15) rotate(-3deg);
	}
	35% {
    -webkit-transform: scale(1.15) rotate(2deg);
		transform: scale(1.15) rotate(2deg);
	}
	40% {
    -webkit-transform: scale(1.15) rotate(0);
		transform: scale(1.15) rotate(0);
	}
}

#task-completed-text {
  position: absolute;
  top: -0.25rem;
  right: 0;
}

#task-completed-text i {
  font-size: 2rem;
  position: relative;
  top: 0.25rem;
}

#task-view textarea {
  text-align: left;
  width: 100%;
  height: 6rem;
  border: 3px solid #cccccc;
  padding: 5px;
  font-family: var(--code-font);
}

@media (max-width: 1680px) and (min-width: 768px) {
  #task-view .col-md-10 {
    padding-right: 1rem;
  }
}

@media (max-width: 768px) {
  #query-model-button,
  #previous-answers {
    margin-right: 0.5rem;
  }
}

#previous-answers-dropdown {
  max-height: 10.5rem;
  overflow-y: auto;
}

.dropdown-item.selected {
  text-decoration: underline;
}

#task-view #model-answer {
  color: var(--col-good-blue-80);
  border-color: var(--col-good-blue-50) !important;
  height: 6rem;
}

.task-container {
  padding-bottom: 2.5rem;
  padding-top: 2rem;
  overflow: auto;
}

#query-in-table {
  -ms-flex-wrap: nowrap;
  flex-wrap: nowrap;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0;
}

.tables {
  margin-right: 1rem;
}

.tables .table-paper {
  margin-right: 1rem;
}

.tables .table-paper:last-child {
  margin-right: 0;
}

.tables > h4 {
  padding: 0;
  margin: 0;
  text-align: left;
  font-size: 1rem;
}

.tables hr {
  margin-top: 0;
  margin-left: 0;
  margin-bottom: 0.5rem;
}

.tables .row {
  padding: 0;
  margin: 0;
}

#query-out-tables-nav {
  margin-bottom: 0;
}

#query-out-table {
  overflow-x: auto;
  margin: 0;
}

#query-out-table > * {
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  margin: 0;
}

/* Floating elements ----------------------- */

.back-button {
  position: fixed;
  top: 1rem;
  left: 2rem;
  z-index: 500;
  font-size: 1.5rem;
  background-color: transparent;
  border-style: none;
  text-shadow: black 0 0 5px;
}

.back-button:focus {
  outline: white dotted 1px;
}

@media (min-width: 768px) {
  .task-container .back-button {
    text-align: right;
    display: -webkit-box;
    display: -ms-flexbox;
    position: fixed;
    left: 2rem;
    top: 1rem;
  }
}

.star-animation {
  position: absolute;
  -webkit-transition: -webkit-transform 1s;
  transition: -webkit-transform 1s;
  -o-transition: transform 1s;
  transition: transform 1s;
  transition: transform 1s, -webkit-transform 1s;
  will-change: tranform;
}
/* ... */

